src/org/api/core/1.3.15/core.redisqueue.md
---
title: "RedisQueue class · @imqueue/core"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/1.3.15/) &gt; [RedisQueue](/api/core/1.3.15/core.redisqueue/)

## RedisQueue class

Class RedisQueue Implements simple messaging queue over redis.

**Signature:**

```typescript
export declare class RedisQueue extends EventEmitter implements IMessageQueue 
```
**Extends:** EventEmitter

**Implements:** [IMessageQueue](/api/core/1.3.15/core.imessagequeue/)

## Constructors

<table><thead><tr><th>

Constructor


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(constructor)(name, options)](/api/core/1.3.15/core.redisqueue._constructor_/)


</td><td>


</td><td>

 Constructs a new instance of the `RedisQueue` class


</td></tr>
</tbody></table>

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[name](/api/core/1.3.15/core.redisqueue.name/)


</td><td>


</td><td>

string


</td><td>


</td></tr>
<tr><td>

[options](/api/core/1.3.15/core.redisqueue.options/)


</td><td>


</td><td>

[IMQOptions](/api/core/1.3.15/core.imqoptions/)


</td><td>

This queue instance options

 {<!-- -->IMQOptions<!-- -->}


</td></tr>
</tbody></table>

## Methods

<table><thead><tr><th>

Method


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[clear()](/api/core/1.3.15/core.redisqueue.clear/)


</td><td>


</td><td>

Clears queue data in redis;


</td></tr>
<tr><td>

[destroy()](/api/core/1.3.15/core.redisqueue.destroy/)


</td><td>


</td><td>

Gracefully destroys this queue


</td></tr>
<tr><td>

[send(toQueue, message, delay, errorHandler)](/api/core/1.3.15/core.redisqueue.send/)


</td><td>


</td><td>

Sends given message to a given queue (by name)


</td></tr>
<tr><td>

[start()](/api/core/1.3.15/core.redisqueue.start/)


</td><td>


</td><td>

Initializes and starts current queue routines


</td></tr>
<tr><td>

[stop()](/api/core/1.3.15/core.redisqueue.stop/)


</td><td>


</td><td>

Stops current queue routines


</td></tr>
</tbody></table>

